# pro-nlp-generationfornlp-nlp-15

./: .gitignore  MULTI_AGENT_COMPARISON.md  README.md  incorrect_ids.txt  incorrect_ids_augments.txt  main.py  pyproject.toml  run_kfold.py  verify_config.py
api_inference/: __init__.py  api_inference.py  api_inference_agent.py  classification.py  func_api_inference.py  test.py
api_inference/agents/: __init__.py  multi_agent_processor.py  multi_agent_processor_80b.py  primary_agent.py  solver_agent.py  verifier_80b_agent.py  verifier_agent.py
api_inference/config/: inference.yaml  inference0.yaml  inference_agent.yaml  inference_cot.yaml  inference_no_cot.yaml  schema.py
api_inference/configs/: schema.py
api_inference/prompts/: __init__.py  question_type.py  templates.py
api_inference/scripts/: __init__.py  retry_failed_verification.py  verify_with_80b.py
api_inference/utils/: __init__.py  answer_parser.py  api_client.py  data_loader.py  llm.py  metrics.py  output_handler.py
baseline/: check_leakage_dummy.py  data_utils.py  generate_confidence.py  infer.py  inference.py  inspect_outputs.py  main.py  model_utils.py  requirements.txt  test_generation.py  test_logits.py  train.py  train_baseline.py  trainer.py
baseline/configs/: ax_light.yaml  config.yaml  config_baseline_compare.yaml  config_test.yaml  config_test_unsloth_v0.yaml  config_test_unsloth_v1.yaml  gemma3.yaml  (+4 more)
config/: ax_light.yaml  exaone.yaml  gemma.yaml  gemma_27b_4bit.yaml  inference.yaml  naver-hyperclovax.yaml  skt_xa.yaml
finetuning/: infer.py  train.py
output/: classification.csv  classification_train.csv
outputs_skt/: README.md
outputs_train/: README.md  eval_epoch_1.csv  eval_epoch_2.csv  eval_epoch_3.csv  eval_epoch_4.csv  eval_epoch_5.csv
simple_sft/: infer.py  train.py
wandb/: latest-run
xa_rank_16/: README.md
xa_rank_8/: README.md
(+185 files in other folders)
