[project]
name = "pro-nlp-generationfornlp-nlp-15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.9.1",
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "peft==0.13.2",
  "bitsandbytes==0.49.0",
  "evaluate==0.4.3",
  "pandas==2.3.3",
  "numpy==1.26.4",
  "scikit-learn==1.5.2",
  "ipykernel==6.29.5",
  "ipywidgets==8.1.8",
  "jupyterlab-widgets==3.0.16",
  "tqdm==4.67.1",
  "requests==2.32.5",
  "matplotlib==3.9.2",
  "wandb",
  "datasets==4.3.0",
  "trl==0.24.0",
  "unsloth-zoo @ git+https://github.com/unslothai/unsloth-zoo.git",
  "unsloth[cu121-torch291] @ git+https://github.com/unslothai/unsloth.git",
  "torchvision>=0.24.1",
]
