[project]
name = "pro-nlp-generationfornlp-nlp-15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "numpy>=2.1.0",
    "openai>=2.13.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]
